--- a/Tetris/css/loginScreen.css
+++ b/Tetris/css/loginScreen.css
@@ -11,7 +11,7 @@
     display: table-cell;
     text-align: center;
     vertical-align: middle;
-    border: 5px double #1e6806;
+    border: 5px double chartreuse;
     background-image: url("../media/back.jpg");
 }
 
