--- a/Tetris/css/tetris.css
+++ b/Tetris/css/tetris.css
@@ -1,4 +1,20 @@
-#main{
+#backgroundImageParent{
+    width: 100%;
+    height: 100%;
+    display: table;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+#backgroundImage{
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+    border: 3px double chartreuse;
+    background-image: url("../media/back.jpg");
+}
+#everything{
+    padding: 0;
     margin: 0 auto;
     width: 640px;
     height: 600px;
@@ -11,33 +27,30 @@
     float: left;
     text-align: left;
 }
-#head{
-    font-size: 48px;
-    font-family: "Times New Roman", serif;
-    font-weight: bold;
-    border-bottom-width: 20px;
-}
 #texts{
-    border: 2px dashed black;
+    border: 3px solid chartreuse;
     padding: 10px;
     margin-bottom: 20px;
 }
-#rules{
-    margin-top: 20px;
-    font-style: italic;
-    margin-bottom: 20px;
+#controls{
+    text-align: center;
+    color: chartreuse;
+    font-size: x-large;
 }
 #info{
     margin-top: 20px;
+    color: chartreuse;
+    font-size: x-large;
+    text-align: center;
+}
+#surrenderButton{
+    text-align: center;
+    font-size: x-large;
 }
 #nextfigure{
     width: 150px;
     height: 150px;
-    border: 4px solid black;
-    padding: 5px;
-}
-#next{
-    text-align: center;
+    border: 3px solid chartreuse;
 }
 #right{
     width: 300px;
@@ -47,5 +60,5 @@
 #tetrisfield{
     width: 300px;
     height: 600px;
-    border: 4px double black;
+    border: 3px solid chartreuse;
 }
