CSS works. Start page template

--- a/Auc/views/layout.pug
+++ b/Auc/views/layout.pug
@@ -2,6 +2,7 @@ doctype html
 html
     head
         title= title
-        link(rel='stylesheet', href='../css/style.min.css')
+        link(rel='stylesheet', href='/css/style.min.css')
+        link(rel='stylesheet', href='/css/w3.css')
     body
         block content
