--- a/Auc/views/index.pug
+++ b/Auc/views/index.pug
@@ -1,4 +1,12 @@
 extends layout
 
 block content
-    p(align='center') Hello world
+        div(class='w3-center' align='center')
+            p(class='w3-xxxlarge') Auction Data Base
+            a(class='w3-btn w3-ripple w3-green w3-margin') Add item
+        table(border='3' width='50%' class='w3-center w3-table w3-striped')
+            tr
+                th(class='w3-center') #
+                th(class='w3-center') Название
+                th(class='w3-center') Автор
+                th(class='w3-center')
