--- a/Auc/views/layout.pug
+++ b/Auc/views/layout.pug
@@ -4,5 +4,6 @@ html
         title= title
         link(rel='stylesheet', href='/css/style.min.css')
         link(rel='stylesheet', href='/css/w3.css')
+        script(src='/javascripts/jQuery.js')
     body
         block content
