Check for auc added

--- a/Auc/views/modal.pug
+++ b/Auc/views/modal.pug
@@ -2,9 +2,10 @@ div(id='modal' class='w3-modal')
     div(class='w3-modal-content')
         div(class='w3-container')
             div(class='w3-container')
-                b Number
-                p
+                p Number:
                     span(id='index_info')
+                p For auction:
+                    input(type='checkbox' id='for_input')
                 b Name
                 input(type='text' class='w3-input' id='name_input')
                 b URL
