--- a/Auc/views/index.pug
+++ b/Auc/views/index.pug
@@ -3,12 +3,12 @@ extends layout
 block content
     include modal
     div(class='w3-center' align='center')
-        p(class='w3-xxxlarge') Auction Data Base
+        p(class='w3-xxxlarge') Auction Data Base (Paintings)
         a(class='w3-btn w3-ripple w3-green w3-margin' onclick='show_dummy()') Add item
     table(border='3' style='width: 50%;' align='center' class='w3-table w3-striped' id='gallery_table')
         tr
             th(class='w3-center') #
-            th(class='w3-center') Название
-            th(class='w3-center') Автор
+            th(class='w3-center') Name
+            th(class='w3-center') Author
             th(class='w3-center')
     script(src='/javascripts/indexScripts.js')
