--- a/Auc/views/index.pug
+++ b/Auc/views/index.pug
@@ -2,8 +2,8 @@ extends layout
 
 block content
     include modal
+    include header
     div(class='w3-center' align='center')
-        p(class='w3-xxxlarge') Auction Data Base (Paintings)
         a(class='w3-btn w3-ripple w3-green w3-margin' onclick='show_dummy()') Add item
     table(border='3' style='width: 50%;' align='center' class='w3-table w3-striped' id='gallery_table')
         tr
