--- a/Auc/views/members.pug
+++ b/Auc/views/members.pug
@@ -2,8 +2,8 @@ extends layout
 
 block content
     include modal2
+    include header
     div(class='w3-center' align='center')
-        p(class='w3-xxxlarge') Auction Data Base (Members)
         a(class='w3-btn w3-ripple w3-green w3-margin' onclick='show_dummy()') Add member
     table(border='3' style='width: 50%;' align='center' class='w3-table w3-striped' id='members_table')
         tr
