Less Stylesheet ready

--- a/Auc/views/members.pug
+++ b/Auc/views/members.pug
@@ -5,7 +5,7 @@ block content
     include header
     div(class='w3-center' align='center')
         a(class='w3-btn w3-ripple w3-green w3-margin' onclick='show_dummy()') Add member
-    table(border='3' style='width: 50%;' align='center' class='w3-table w3-striped' id='members_table')
+    table(border='3' align='center' class='w3-table w3-striped' id='members_table')
         tr
             th(class='w3-center') Name
             th(class='w3-center') Surname
