--- a/Auc/views/header.pug
+++ b/Auc/views/header.pug
@@ -1,4 +1,4 @@
-div(align='center' class='w3-red' style='width:100%; height:10%; position: relative')
+div(id='header' align='center')
     P(class='w3-xxxlarge') Auction
     a(class='w3-btn w3-green w3-margin' href='/members') Members
     a(class='w3-btn w3-green w3-margin' href='/') Paintings
