--- a/Auc2/views/includes/picture_modal.pug
+++ b/Auc2/views/includes/picture_modal.pug
@@ -21,9 +21,9 @@ div(id='modal' class='w3-modal')
 
             div(class='w3-row w3-margin-bottom')
                 div(class='w3-half')
-                    label Покупатель
-                    input(class='w3-input w3-border w3-white' id='buyer_input' type='text' disabled)
+                    b Byer
+                    input(class='w3-input' id='buyer_input' type='text' disabled)
                 div(class='w3-half')
-                    label Цена покупки
-                    input(class='w3-input w3-border w3-white' type='number' id='sold_price_input' disabled)
+                    b Bying Price
+                    input(class='w3-input' type='number' id='sold_price_input' disabled)
 
