--- a/Auc2/views/includes/trade_log.pug
+++ b/Auc2/views/includes/trade_log.pug
@@ -1,7 +1,7 @@
 div(class='w3-margin' id="trade_log_container" style='height: 200px')
     table(class='w3-table-all w3-hoverable' id='trade_table')
         thead
-            th(style='width: 15%') Время
-            th Сообщение
+            th(style='width: 15%') Time
+            th Message
         tbody
 script(src='/javascript/trade_log.js')
