--- a/Auc2/views/includes/user_controls.pug
+++ b/Auc2/views/includes/user_controls.pug
@@ -1,9 +1,9 @@
 div(class='w3-margin')
     div(class='w3-container')
         p
-            label Новая цена
+            label Enter Price
             input(class='w3-input' id='new_price_input' type='number' disabled)
         div(class='w3-bar w3-margin-bottom')
-            button(class='w3-btn w3-green w3-margin-right' onclick='newPrice()' id='set_button' disabled) Предложить новую цену
-            button(class='w3-btn w3-red' onclick='participate()' id='request_button' disabled) Подать заявку
+            button(class='w3-btn w3-green w3-margin-right' onclick='newPrice()' id='set_button' disabled) Raise Price
+            button(class='w3-btn w3-red' onclick='participate()' id='request_button' disabled) Participate
 script(src='/javascript/user_controls.js')
