--- a/Auc2/views/includes/trade_log.pug
+++ b/Auc2/views/includes/trade_log.pug
@@ -4,4 +4,4 @@ div(class='w3-margin' id="trade_log_container" style='height: 200px')
             th(style='width: 15%') Time
             th Message
         tbody
-script(src='/javascript/trade_log.js')
+script(src='/javascripts/trade_log.js')
