--- a/Auc2/views/ketter.pug
+++ b/Auc2/views/ketter.pug
@@ -19,4 +19,7 @@ block content
                 tr
                     th Name
                     th Money
+                    th Acquisitions
                     th Status
+
+    script(src='/javascripts/ketter.js')
