--- a/Auc2/views/euclid.pug
+++ b/Auc2/views/euclid.pug
@@ -14,3 +14,5 @@ block content
                         button(class='w3-btn w3-green w3-margin-right' onclick='newPrice()' id='set_button' disabled) Raise Price
                         button(class='w3-btn w3-red' onclick='participate()' id='request_button' disabled) Participate
             include includes/trade_log
+
+    script(src='javascripts/euclid.js')
