--- a/Auc2/views/layout.pug
+++ b/Auc2/views/layout.pug
@@ -2,10 +2,10 @@ html
     head
         link(rel='stylesheet' href='/stylesheets/w3.css' type='text/css')
         link(rel='stylesheet' href='/lib/jquery-ui/jquery-ui.css')
-        script(src='lib/jquery/jquery-3.3.1.min.js')
-        script(src='lib/jquery-ui/jquery-ui.js')
+        script(src='/lib/jquery/jquery-3.3.1.min.js')
+        script(src='/lib/jquery-ui/jquery-ui.js')
         script(src='http://localhost:3030/socket.io/socket.io.js')
         title Auction - #{title}
     body
         block content
-    script(src='javascripts/layout.js')
+    script(src='/javascripts/layout.js')
