Some fixes due to participating work

--- a/Auc2/views/euclid.pug
+++ b/Auc2/views/euclid.pug
@@ -15,4 +15,4 @@ block content
                         button(class='w3-btn w3-red' onclick='participate()' id='request_button' disabled) Participate
             include includes/trade_log
 
-    script(src='javascripts/euclid.js')
+    script(src='/javascripts/euclid.js')
