--- a/Auc2/views/index.pug
+++ b/Auc2/views/index.pug
@@ -5,8 +5,4 @@ block content
     input(type='text' id='name')
     a(class='w3-btn w3-green w3-margin' onclick='go()' id='goButton' href='') Go to auction
 
-    script.
-        function go() {
-            let name = $('#name').val();
-            $('#goButton').attr('href', '/start/' + name);
-        }
+    script(src='/javascripts/index.js')
