--- a/Auc2/views/ketter.pug
+++ b/Auc2/views/ketter.pug
@@ -4,11 +4,11 @@ block content
     div(class='w3-row')
         div(class='w3-half')
             include includes/picture_info
+            include includes/user_info
         div(class='w3-half')
             div(class='w3-margin')
                 div(class='w3-container')
                     p
-                        p(align='center') Choose Picture
                         select(class='w3-select' id='pictures_select')
                     div(class='w3-margin-bottom')
                         button(class='w3-btn w3-green w3-margin-right' onclick='setPicture()' id='set_button') Put on review
