--- a/Auc2/views/euclid.pug
+++ b/Auc2/views/euclid.pug
@@ -4,6 +4,7 @@ block content
     div(class='w3-row')
         div(class='w3-half')
             include includes/picture_info
+            include includes/user_info
         div(class='w3-half')
             div(class='w3-margin')
                 div(class='w3-container')
