--- a/Auc2/views/includes/picture_modal.pug
+++ b/Auc2/views/includes/picture_modal.pug
@@ -3,7 +3,7 @@ div(id='modal' class='w3-modal')
         div(class='w3-container')
             span(onclick="document.getElementById('modal').style.display='none'"
             class='w3-button w3-display-topright') &times
-            div(class='w3-container')
+            div(class='w3-container w3-margin-bottom')
                 p Number:
                     span(id='index_info')
                 p For auction:
@@ -18,12 +18,3 @@ div(id='modal' class='w3-modal')
                 input(type='text' class='w3-input' id='minstep_input' disabled='true')
                 b Maximal Step
                 input(type='text' class='w3-input' id='maxstep_input' disabled='true')
-
-            div(class='w3-row w3-margin-bottom')
-                div(class='w3-half')
-                    b Byer
-                    input(class='w3-input' id='buyer_input' type='text' disabled)
-                div(class='w3-half')
-                    b Bying Price
-                    input(class='w3-input' type='number' id='sold_price_input' disabled)
-
