--- a/Auc2/views/ketter.pug
+++ b/Auc2/views/ketter.pug
@@ -13,5 +13,6 @@ block content
                     div(class='w3-margin-bottom')
                         button(class='w3-btn w3-green w3-margin-right' onclick='setPicture()' id='set_button') Put on review
                         button(class='w3-btn w3-red' onclick='startAuction()' id='start_auc_button' disabled) Start
+                        a(class='w3-btn w3-orange w3-margin-left' href='/info'  id='info_pic_button' ) Show info About pictures
             include includes/trade_log
     script(src='/javascripts/ketter.js')
