--- a/Auc2/views/index.pug
+++ b/Auc2/views/index.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     p Hello, welcome to the auction
-    input(type='text' id='name')
+    input(type='text' class='w3-margin' id='name')
     a(class='w3-btn w3-green w3-margin' onclick='go()' id='goButton' href='') Go to auction
 
     script(src='/javascripts/index.js')
