--- a/Stock/src/app/navigation/navigation.component.html
+++ b/Stock/src/app/navigation/navigation.component.html
@@ -1,3 +1,4 @@
 <button>Stocks</button>
 <button>Brokers</button>
-<button>Stock market settings</button>
+<button (click)="lolkek()">Stock market settings</button>
+<input [(ngModel)]="variable">
