--- a/Stock/src/app/stocks/stocks.component.html
+++ b/Stock/src/app/stocks/stocks.component.html
@@ -1,3 +1,40 @@
-<p>
-  stocks works!
-</p>
+<div id="modal" class="w3-modal">
+  <div class="w3-modal-content">
+    <div class="w3-container">
+      <p>
+        Number
+        <span id="index_info"></span>
+      </p>
+      <b>Name</b>
+      <input type="text" class="w3-input" id="name_input">
+      <b>Price</b>
+      <input type="number" class="w3-input" id="price_input">
+      <b>Changing Law</b>
+      <select class="w3-select" name="law_input">
+        <option value="random">Random</option>
+        <option value="normal">Normal</option>
+        <option value="binom">Binomial</option>
+      </select>
+      <b>Ammount</b>
+      <input type="number" class="w3-input" id="amm_input">
+
+      <div class="w3-container" align="center">
+        <button class="w3-btn w3-green w3-margin-bottom w3-margin-top">Save Chnages</button>
+        <button class="w3-btn w3-red w3-margin-bottom w3-margin-top" (click)="dismiss_modal()">Cancel</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="w3-center" align="center">
+  <a class="w3-btn w3-ripple w3-green w3-margin" (click)="showdummy()"> Add item</a>
+</div>
+<table border="3" style="width: 50%;" align="center" class="w3-table w3-striped" id="stock_table">
+  <tr>
+    <th class="w3-center">#</th>
+    <th class="w3-center">Name</th>
+    <th class="w3-center">Price</th>
+    <th class="w3-center">Changing Law</th>
+    <th class="w3-center">Ammount</th>
+  </tr>
+</table>
