--- a/Stock/src/app/brokers/brokers.component.html
+++ b/Stock/src/app/brokers/brokers.component.html
@@ -1,3 +1,30 @@
-<p>
-  brokers works!
-</p>
+<div id="modal" class="w3-modal">
+  <div class="w3-modal-content">
+    <div class="w3-container">
+      <p>
+        Number
+        <span id="index_info"></span>
+      </p>
+      <b>Name</b>
+      <input type="text" class="w3-input" id="name_input">
+      <b>Money</b>
+      <input type="number" class="w3-input" id="price_input">
+
+      <div class="w3-container" align="center">
+        <button class="w3-btn w3-green w3-margin-bottom w3-margin-top">Save Chnages</button>
+        <button class="w3-btn w3-red w3-margin-bottom w3-margin-top" (click)="dismiss_modal()">Cancel</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="w3-center" align="center">
+  <a class="w3-btn w3-ripple w3-green w3-margin" (click)="showdummy()"> Add item</a>
+</div>
+<table border="3" style="width: 50%;" align="center" class="w3-table w3-striped" id="stock_table">
+  <tr>
+    <th class="w3-center">#</th>
+    <th class="w3-center">Name</th>
+    <th class="w3-center">Money</th>
+  </tr>
+</table>
