Settings page start

--- a/Stock/src/app/settings/settings.component.html
+++ b/Stock/src/app/settings/settings.component.html
@@ -1,3 +1,12 @@
-<p>
-  settings works!
-</p>
+<div align="center">
+  <b>Starts at</b>
+  <input type="date" class="w3-input" id="date_input">
+  <b>Start time</b>
+  <input type="time" class="w3-input" id="stime_input">
+  <b>Stop time</b>
+  <input type="time" class="w3-input" id="ftime_input">
+  <b>Price change timeout</b>
+  <input type="time" class="w3-input" id="timeout_input">
+
+  <button class="w3-green w3-btn w3-margin-top">Save changes</button>
+</div>
