--- a/Stock/src/app/brokers/brokers.component.html
+++ b/Stock/src/app/brokers/brokers.component.html
@@ -1,17 +1,13 @@
 <div id="modal" class="w3-modal">
   <div class="w3-modal-content">
     <div class="w3-container">
-      <p>
-        Number
-        <span id="index_info"></span>
-      </p>
       <b>Name</b>
       <input type="text" class="w3-input" id="name_input">
       <b>Money</b>
       <input type="number" class="w3-input" id="price_input">
 
       <div class="w3-container" align="center">
-        <button class="w3-btn w3-green w3-margin-bottom w3-margin-top">Save Chnages</button>
+        <button class="w3-btn w3-green w3-margin-bottom w3-margin-top" (click)="save_changes()">Save Chnages</button>
         <button class="w3-btn w3-red w3-margin-bottom w3-margin-top" (click)="dismiss_modal()">Cancel</button>
       </div>
     </div>
@@ -22,9 +18,14 @@
   <a class="w3-btn w3-ripple w3-green w3-margin" (click)="showdummy()"> Add item</a>
 </div>
 <table border="3" style="width: 50%;" align="center" class="w3-table w3-striped" id="stock_table">
+  <thead>
   <tr>
-    <th class="w3-center">#</th>
     <th class="w3-center">Name</th>
     <th class="w3-center">Money</th>
+  </tr>
+  </thead>
+  <tr *ngFor="let broker of brokers" (click)="show_info(broker)">
+    <th class="w3-center">{{broker.name}}</th>
+    <th class="w3-center">{{broker.price}}</th>
   </tr>
 </table>
