--- a/Stock/src/app/stocks/stocks.component.html
+++ b/Stock/src/app/stocks/stocks.component.html
@@ -17,6 +17,7 @@
       <div class="w3-container" align="center">
         <button class="w3-btn w3-green w3-margin-bottom w3-margin-top" (click)="save_changes()">Save Chnages</button>
         <button class="w3-btn w3-red w3-margin-bottom w3-margin-top" (click)="dismiss_modal()">Cancel</button>
+        <button class="w3-display-bottomleft w3-margin-left w3-btn w3-deep-purple w3-margin-top w3-margin-bottom" disabled id='db' (click)="delete_stock()">Remove stock</button>
       </div>
     </div>
   </div>
