--- a/Stock/src/app/brokers/brokers.component.html
+++ b/Stock/src/app/brokers/brokers.component.html
@@ -5,17 +5,17 @@
       <input type="text" class="w3-input" id="name_input">
       <b>Money</b>
       <input type="number" class="w3-input" id="price_input">
-
       <div class="w3-container" align="center">
         <button class="w3-btn w3-green w3-margin-bottom w3-margin-top" (click)="save_changes()">Save Chnages</button>
         <button class="w3-btn w3-red w3-margin-bottom w3-margin-top" (click)="dismiss_modal()">Cancel</button>
+        <button class="w3-display-bottomleft w3-margin-left w3-btn w3-deep-purple w3-margin-top w3-margin-bottom" id="db" disabled (click)="delete_broker()">Remove broker</button>
       </div>
     </div>
   </div>
 </div>
 
 <div class="w3-center" align="center">
-  <a class="w3-btn w3-ripple w3-green w3-margin" (click)="showdummy()"> Add item</a>
+  <a class="w3-btn w3-ripple w3-green w3-margin" (click)="showdummy()"> Add</a>
 </div>
 <table border="3" style="width: 50%;" align="center" class="w3-table w3-striped" id="stock_table">
   <thead>
