--- a/Stock/src/app/stocks/stocks.component.html
+++ b/Stock/src/app/stocks/stocks.component.html
@@ -15,9 +15,9 @@
       <input type="number" class="w3-input" id="amm_input">
 
       <div class="w3-container" align="center">
-        <button class="w3-btn w3-green w3-margin-bottom w3-margin-top" (click)="save_changes()">Save Chnages</button>
+        <button class="w3-btn w3-green w3-margin-bottom w3-margin-top" (click)="save_changes_local()">Save Chnages</button>
         <button class="w3-btn w3-red w3-margin-bottom w3-margin-top" (click)="dismiss_modal()">Cancel</button>
-        <button class="w3-display-bottomleft w3-margin-left w3-btn w3-deep-purple w3-margin-top w3-margin-bottom" disabled id='db' (click)="delete_stock()">Remove stock</button>
+        <button class="w3-display-bottomleft w3-margin-left w3-btn w3-deep-purple w3-margin-top w3-margin-bottom" disabled id='db' (click)="delete_stock_local()">Remove stock</button>
       </div>
     </div>
   </div>
@@ -35,7 +35,7 @@
     <th class="w3-center">Ammount</th>
   </tr>
   </thead>
-  <tr *ngFor="let stock of stocks" (click)="show_info(stock)">
+  <tr *ngFor="let stock of get_stocks()" (click)="show_info(stock)">
     <th class="w3-center">{{stock.name}}</th>
     <th class="w3-center">{{stock.price}}</th>
     <th class="w3-center">{{stock.law}}</th>
