--- a/Game/views/index.pug
+++ b/Game/views/index.pug
@@ -1,4 +1,8 @@
 extends layout
 
 block content
-    p Hello world
+    div(style='height:100%' class='w3-deep-purple w3container')
+        div(class='w3-red' style='width:256px; height:256px')
+        canvas(id='canvas' class='w3-display-middle' style='width:512px; height:512px')
+        div(class='w3-red' style='width:256px; height:256px')
+    script(src='/javascript/mapManager.js')
