--- a/Game/views/index.pug
+++ b/Game/views/index.pug
@@ -6,6 +6,7 @@ block content
         canvas(id='canvas' class='w3-display-middle' style='image-rendering: pixelated; border: 5px solid black;' width=512 height=512)
         div(class='w3-red' style='width:256px; height:256px')
     script(src='/javascript/Entities.js')
+    script(src='/javascript/eventManager.js')
     script(src='/javascript/mapManager.js')
     script(src='/javascript/spriteManager.js')
     script(src='/javascript/gameManager.js')
