--- a/Game/views/index.pug
+++ b/Game/views/index.pug
@@ -1,13 +1,28 @@
 extends layout
 
 block content
-    div(style='height:100%' class='w3container')
-        div(class='w3-red' style='width:256px; height:256px')
+    include fight_modal
+    div(style='height:100%' class='w3-container')
+        div(class='w3-red' style='width:256px; height:400px')
+            p Controls: p ←, →, ↑, ↓ to move
+            p You can walk 16 steps each turn
+            p End turn by pressing Enter
+            p
+            p In fight:
+            p Atteck - forces your units to attack enemy
+            p Defend - Your units do not attack and take 50% less dammage from next enemy attack
+            p
+            p Music - "The Witcher 3 - Kaer Morchen theeme (Gingertail Cover)
+        div(class='w3-container')
+            p Player1:
+            input(type='text' disabled id='pl1a')
+            p Player2:
+            input(type='text' disabled id='pl2a')
         canvas(id='canvas' class='w3-display-middle' style='image-rendering: pixelated; border: 5px solid black;' width=512 height=512)
-        div(class='w3-red' style='width:256px; height:256px')
     script(src='/javascript/Entities.js')
     script(src='/javascript/physicsManager.js')
     script(src='/javascript/eventManager.js')
     script(src='/javascript/mapManager.js')
     script(src='/javascript/spriteManager.js')
+    script(src='/javascript/soundManager.js')
     script(src='/javascript/gameManager.js')
