Player switch changed

--- a/Game/views/fight_modal.pug
+++ b/Game/views/fight_modal.pug
@@ -4,8 +4,8 @@ div(id='modal' class='w3-modal')
             div(align='center')
                 p Fight!
                 p(id='1') Player1 vs Skeleton1
-                div(class='w3-green w3-left w3-container' id='left') ABC
-                div(class='w3-red w3-right w3-container' id='right') DEF
+                input(type='text' class='w3-green w3-left w3-container' disabled id='left')
+                input(type='text' class='w3-red w3-right w3-container' disabled id='right')
 
                 button(class='w3-btn w3-red') Attack
                 button(class='w3-btn w3-red') Defend
