--- a/Game/views/fight_modal.pug
+++ b/Game/views/fight_modal.pug
@@ -3,10 +3,11 @@ div(id='modal' class='w3-modal')
         div(class='w3-container')
             div(align='center')
                 p Fight!
-                p(id='1') Player1 vs Skeleton1
+                p(id='1')
+                p(id='2')
                 input(type='text' class='w3-green w3-left w3-container' disabled id='left')
                 input(type='text' class='w3-red w3-right w3-container' disabled id='right')
 
-                button(class='w3-btn w3-red') Attack
-                button(class='w3-btn w3-red') Defend
+                button(onclick='run()' class='w3-btn w3-margin-bottom w3-green') Back off
+                button(onclick='attack()' class='w3-btn w3-margin-bottom w3-red') Attack
 
