PvP and its over

--- a/Game/views/endgame_modal.pug
+++ b/Game/views/endgame_modal.pug
@@ -4,4 +4,4 @@ div(id='modal_end' class='w3-modal')
             div(align='center')
                 p Game Over!
                 p(id='3')
-                button(class='w3-btn w3-green' onclick='gameover()') Play again
+                button(class='w3-btn w3-margin-bottom w3-green' onclick='gameover()') Play again
