--- a/Game/views/index.pug
+++ b/Game/views/index.pug
@@ -3,6 +3,7 @@ extends layout
 block content
     include fight_modal
     include endgame_modal
+    include pvp_modal
     div(style='height:100%' class='w3-container')
         div(class='w3-red' style='width:256px; height:300px')
             p Controls: ←, →, ↑, ↓ to move
