--- a/Game/views/index.pug
+++ b/Game/views/index.pug
@@ -5,7 +5,7 @@ block content
     include endgame_modal
     include pvp_modal
     div(style='height:100%' class='w3-container')
-        div(class='w3-red' style='width:256px; height:300px')
+        div(class='w3-red' style='width:256px; padding: 20; border: black solid; height:350px')
             p Controls: ←, →, ↑, ↓ to move
             p You can walk 16 steps each turn
             p End turn by pressing Enter
